<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutLearnActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/user_name"
        app:placeholderText="@string/your_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <Spinner-->
    <!--        android:id="@+id/spinner"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:entries="@array/gender"-->
    <!--        android:layout_below="@+id/userNameTil"-->
    <!--        android:layout_marginHorizontal="16dp"/>-->

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameTil"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_4dp_grey_border_1dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp" />

    <AbsoluteLayout
        android:id="@+id/bellWrapper"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/spinner"
        android:layout_margin="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_y="36dp"
            android:src="@drawable/notifications_24"
            app:tint="@color/gray" />

        <TextView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_x="64dp"
            android:background="@drawable/circular_red_bg"
            android:gravity="center"
            android:text="10"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </AbsoluteLayout>

    <RadioGroup
        android:id="@+id/genderWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bellWrapper"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radioOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/others" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/checkboxWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/genderWrapper">

        <CheckBox
            android:id="@+id/addExtraCheeseCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add Extra Cheese"
            android:layout_marginEnd="4dp"/>

        <CheckBox
            android:id="@+id/addExtraToppingsCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add Extra Toppings"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/clickMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxWrapper"
        android:layout_centerInParent="true"
        android:text="@string/click_me" />

</RelativeLayout>