<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LayoutLearnActivity"
    android:stretchColumns="*"
    android:collapseColumns="3">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greetingLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="32sp"
            android:layout_column="0"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunil"
            android:textSize="32sp"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/userSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prasai"
            android:textSize="32sp"
            android:layout_column="2"/>

        <Button
            android:id="@+id/clickMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_me"
            android:layout_column="3"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greetingLbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="32sp"
            android:layout_column="0"/>

        <TextView
            android:id="@+id/userName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunil"
            android:textSize="32sp"
            android:layout_column="1"/>

        <Button
            android:id="@+id/clickMe1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_me"
            android:layout_column="3"/>

    </TableRow>


</TableLayout>